--- a/src/app/components/stock-selection/stock-selection.component.scss
+++ b/src/app/components/stock-selection/stock-selection.component.scss
@@ -2,6 +2,7 @@
 
 .form-container {
   width: 100%;
+  position: relative;
 }
 
 input {
@@ -17,6 +18,25 @@ input {
 
 input:focus {
   outline: none;
+}
+
+.filter-card {
+  min-height: 48px;
+  max-height: 150px;
+  width: calc(100% - 40px);
+  overflow: auto;
+  position: absolute;
+  top: 52px;
+  background-color: $alt2-colour;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.stock-div {
+  padding: 4px;
+}
+
+.stock-div:hover {
+  background-color: $grayhover-colour;
 }
 
 .error-text {
