--- a/src/scss/colours.scss
+++ b/src/scss/colours.scss
@@ -6,6 +6,7 @@ $black-colour: #000;
 $white-colour: #FFF;
 $verylight-gray: #f0f5f5;
 $lightgray-colour: #c3d6d4;
+$grayhover-colour: #4f5f58;
 $mediumgray-colour: #38433e;
 $darkgray-colour: #2C3531;
 $lightblue-colour: #4FC3F7;
