--- a/src/scss/app-background.scss
+++ b/src/scss/app-background.scss
@@ -2,5 +2,5 @@
 
 .app-background {
   background-color: $lightgray-colour;
-  background-image: url(~assets/topography.svg);
+  background-image: url(~assets/reconstockbackground.svg);
 }
