--- a/src/scss/flex-box.scss
+++ b/src/scss/flex-box.scss
@@ -13,6 +13,10 @@ Reduces duplicate code by providing heavily used code blocks
   flex-direction: column;
 }
 
+.wrap {
+  flex-wrap: wrap;
+}
+
 .flex-spacer {
   flex: 1 1 auto;
 }
